Mejora en registro de usuarios, con confirmacion de email, falta configurar el email de la pagina